--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "docs:json": "compodoc -p ./tsconfig.base.json -e json -d .",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
+    "build-storybook": "npm run docs:json && build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +25,8 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@nrwl/angular": "12.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
@@ -35,7 +40,10 @@
     "@angular-eslint/template-parser": "~12.3.0",
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "^12.2.0",
+    "@angular/elements": "^12.2.12",
     "@angular/language-service": "^12.2.0",
+    "@babel/core": "^7.15.8",
+    "@compodoc/compodoc": "^1.1.15",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.10.0",
@@ -47,10 +55,18 @@
     "@nrwl/node": "12.10.0",
     "@nrwl/tao": "12.10.0",
     "@nrwl/workspace": "12.10.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/angular": "^6.3.12",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
     "@typescript-eslint/parser": "~4.31.1",
+    "@webcomponents/custom-elements": "^1.5.0",
+    "babel-loader": "^8.2.3",
     "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
